--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous">
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/app.css">
@@ -51,6 +51,94 @@
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
     </header>
 	
+<style>
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #f1f1f1;
+    padding: 20px;
+    font-family: Arial;
+}
+
+/* Center website */
+.main {
+    max-width: 1000px;
+    margin: auto;
+}
+
+h1 {
+    font-size: 50px;
+    word-break: break-all;
+}
+
+.row {
+    margin: 10px -16px;
+}
+
+/* Add padding BETWEEN each column */
+.row,
+.row > .column {
+    padding: 8px;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+    display: none; /* Hide all elements by default */
+}
+
+/* Clear floats after rows */ 
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Content */
+.content {
+    background-color: white;
+    padding: 10px;
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: white;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #ddd;
+}
+
+.btn.active {
+  background-color: #666;
+  color: white;
+}
+
+h4 {
+    color:orange;
+  }
+h5 {
+      color: skyblue;
+      font-size: 14px;
+  }
+
+
+  .s{
+      box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+  }
+</style>
 
 
 
@@ -63,52 +151,317 @@
 
 
 
+<div class="main">
+
+<h1>DEALS</h1>
+
+    <i class="fa fa-google-plus-circle p" style="font-size:40px"></i>
+    <i class="fa fa-twitter p" style="font-size:40px";></i><hr>
 
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-    <div class="row">
-            <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div>   
-            <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div>
-            <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div>
-            <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div> 
-      </div>
-    </div>
+<h2 class="w3-container w3-center w3-animate-right">ON SALE</h2>
 
-    <div class="carousel-item">
-    <div class="row">
-      <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div>   
-            <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div>
-            <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div>
-            <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div> 
-        </div>
-      </div>
-
-    <div class="carousel-item">
-    <div class="row">
-           <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div>   
-            <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div>
-            <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div>
-            <div class="col-3"><img class="d-block w-100" src="https://s33.postimg.cc/49puczw3z/PC-_Game30.jpg"  alt="ultraa "></div> 
-    </div>
-    </div>
-
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+<div id="myBtnContainer">
+  <button class="btn active" onclick="filterSelection('all')"> Show all</button>
+  <button class="btn" onclick="filterSelection('natur')">Under RS.500 </button>
+  <button class="btn" onclick="filterSelection('cars')"> Under RS.1000</button>
+  <button class="btn" onclick="filterSelection('people')"> Above.1000</button>
 </div>
+
+<!-- Portfolio Gallery Grid -->
+<div class="row">
+  
+ 
+  <div class="column nature">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/y1jiprd17/PC-_Game1.jpg" alt="Lights" style="width:100%">
+      <center>
+      <h3>WARCRAFT</h3>
+      <h4>RS.450</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.700</del></p>
+      </center>
+    </div>
+  </div>
+   <div class="column nature">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/n1ybe4zgr/PC-_Game16.jpg" alt="Lights" style="width:100%">
+      <center>
+      <h3>THE DIVISION</h3>
+      <h4>RS.470</h4>
+      <h5>SAVE 40%</h5>
+      <p><del>Rs.800</del></p>
+      </center>
+    </div>
+  </div>
+  
+  <div class="column nature">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/5ai3lyx97/battle.jpg" alt="Nature" style="width:100%">
+      <center>
+      <h3>BATTLEGROUNDS</h3>
+      <h4>RS.499</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.850</del></p>
+      </center>
+    </div>
+  </div>
+
+
+
+
+
+
+<div class="column people">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/5smft599n/hit.jpg" alt="Lights" style="width:100%">
+      <center>
+      <h3>HITMAN</h3>
+      <h4>RS.1100</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.1400</del></p>
+      </center>
+    </div>
+  </div>
+   <div class="column people">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/hzgzj8fuz/nfs.jpg" alt="Lights" style="width:100%">
+      <center>
+      <h3>NEED FOR SPEED</h3>
+      <h4>RS.1000</h4>
+      <h5>SAVE 20%</h5>
+      <p><del>Rs.1300</del></p>
+      </center>
+    </div>
+  </div>
+  
+  <div class="column people">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/t1m2hxhq3/fifa.jpg" alt="Nature" style="width:100%">
+      <center>
+      <h3>FIFA 2018</h3>
+      <h4>RS.1250</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.1500</del></p>
+      </center>
+    </div>
+  </div>
+  
+
+
+  <div class="column cars">
+    <div class="content s">
+      <img src="https://s15.postimg.cc/bfisqteez/image.jpg" alt="Car" style="width:100%">
+      <center>
+      <h3>THE GTA 5</h3>
+      <h4>RS.800</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.1200</del></p>
+      </center>
+    </div>
+  </div>
+  <div class="column cars s">
+    <div class="content">
+    <img src="https://s15.postimg.cc/5oo0zabvf/battle1.jpg" alt="Car" style="width:100%">
+      <center>
+      <h3>FARCRY</h3>
+      <h4>RS.850</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.1300</del></p>
+      </center>
+    </div>
+  </div>
+  <div class="column cars s">
+    <div class="content">
+    <img src="https://s15.postimg.cc/9l1cv99pn/images.jpg" alt="Car" style="width:100%">
+      <center>
+      <h3>ARCHE AGE</h3>
+      <h4>RS.900</h4>
+      <h5>SAVE 20%</h5>
+      <p><del>Rs.1400</del></p>
+      </center>
+    </div>
+  </div>
+
+
+
+
+<div class="column nature">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/5dfrdvkfv/image.jpg" alt="Nature" style="width:100%">
+      <center>
+      <h3>CALL OF DUTY</h3>
+      <h4>RS.500</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.800</del></p>
+      </center>
+    </div>
+  </div>
+    <div class="column cars s">
+    <div class="content">
+    <img src="https://s15.postimg.cc/hs2jeih6j/max.jpg" alt="Car" style="width:100%">
+      <center>
+      <h3>MAX PAYNE 3</h3>
+      <h4>RS.800</h4>
+      <h5>SAVE 20%</h5>
+      <p><del>Rs.1100</del></p>
+      </center>
+    </div>
+  </div>
+ <div class="column people">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/a1vr93jx7/ass.jpg" alt="Nature" style="width:100%">
+      <center>
+      <h3>ASSASSINS CREED</h3>
+      <h4>RS.1350</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.1500</del></p>
+      </center>
+    </div>
+  </div>
+  
+
+
+  <div class="column nature">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/4mdugr0rv/PC-_Game7.jpg" alt="Nature" style="width:100%">
+      <center>
+      <h3>DARKSIDE 2</h3>
+      <h4>RS.500</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.800</del></p>
+      </center>
+    </div>
+  </div>
+    <div class="column cars s">
+    <div class="content">
+    <img src="https://s15.postimg.cc/9mfw2i8nv/call.jpg" alt="Car" style="width:100%">
+      <center>
+      <h3>CALL OF DUTY 3</h3>
+      <h4>RS.800</h4>
+      <h5>SAVE 20%</h5>
+      <p><del>Rs.1100</del></p>
+      </center>
+    </div>
+  </div>
+ <div class="column people">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/uw3idd4e3/far.jpg" alt="Nature" style="width:100%">
+      <center>
+      <h3>FARCRY 5</h3>
+      <h4>RS.1350</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.1500</del></p>
+      </center>
+    </div>
+  </div>
+
+
+
+<div class="column nature">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/5dfrdvkfv/image.jpg" alt="Nature" style="width:100%">
+      <center>
+      <h3>CALL OF DUTY</h3>
+      <h4>RS.500</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.800</del></p>
+      </center>
+    </div>
+  </div>
+    <div class="column cars s">
+    <div class="content">
+    <img src="https://s15.postimg.cc/qybna5n17/PC-_Game8.jpg" alt="Car" style="width:100%">
+      <center>
+      <h3>ASSASSINS CREED</h3>
+      <h4>RS.800</h4>
+      <h5>SAVE 20%</h5>
+      <p><del>Rs.1100</del></p>
+      </center>
+    </div>
+  </div>
+ <div class="column people">
+    <div class="content s">
+    <img src="https://s15.postimg.cc/a1vr93jx7/ass.jpg" alt="Nature" style="width:100%">
+      <center>
+      <h3>ASSASSINS CREED ORIGIN</h3>
+      <h4>RS.1350</h4>
+      <h5>SAVE 30%</h5>
+      <p><del>Rs.1500</del></p>
+      </center>
+    </div>
+  </div>
+
+
+<!-- END GRID -->
+</div>
+
+<!-- END MAIN -->
+</div>
+
+<script>
+filterSelection("all")
+function filterSelection(c) {
+  var x, i;
+  x = document.getElementsByClassName("column");
+  if (c == "all") c = "";
+  for (i = 0; i < x.length; i++) {
+    w3RemoveClass(x[i], "show");
+    if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
+  }
+}
+
+function w3AddClass(element, name) {
+  var i, arr1, arr2;
+  arr1 = element.className.split(" ");
+  arr2 = name.split(" ");
+  for (i = 0; i < arr2.length; i++) {
+    if (arr1.indexOf(arr2[i]) == -1) {element.className += " " + arr2[i];}
+  }
+}
+
+function w3RemoveClass(element, name) {
+  var i, arr1, arr2;
+  arr1 = element.className.split(" ");
+  arr2 = name.split(" ");
+  for (i = 0; i < arr2.length; i++) {
+    while (arr1.indexOf(arr2[i]) > -1) {
+      arr1.splice(arr1.indexOf(arr2[i]), 1);     
+    }
+  }
+  element.className = arr1.join(" ");
+}
+
+
+// Add active class to the current button (highlight it)
+var btnContainer = document.getElementById("myBtnContainer");
+var btns = btnContainer.getElementsByClassName("btn");
+for (var i = 0; i < btns.length; i++) {
+  btns[i].addEventListener("click", function(){
+    var current = document.getElementsByClassName("active");
+    current[0].className = current[0].className.replace(" active", "");
+    this.className += " active";
+  });
+}
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
