--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="css/app.css">
 
 
+
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -174,35 +177,38 @@ h5 {
  
   <div class="column nature">
     <div class="content s">
-    <img src="https://s15.postimg.cc/y1jiprd17/PC-_Game1.jpg" alt="Lights" style="width:100%">
+    <img src="img/PC-Game1.jpg" alt="Lights" style="width:100%">
       <center>
       <h3>WARCRAFT</h3>
       <h4>RS.450</h4>
       <h5>SAVE 30%</h5>
       <p><del>Rs.700</del></p>
+              <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
    <div class="column nature">
     <div class="content s">
-    <img src="https://s15.postimg.cc/n1ybe4zgr/PC-_Game16.jpg" alt="Lights" style="width:100%">
+    <img src="img/PC-Game16.jpg" alt="Lights" style="width:100%">
       <center>
       <h3>THE DIVISION</h3>
       <h4>RS.470</h4>
       <h5>SAVE 40%</h5>
       <p><del>Rs.800</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
   
   <div class="column nature">
     <div class="content s">
-    <img src="https://s15.postimg.cc/5ai3lyx97/battle.jpg" alt="Nature" style="width:100%">
+    <img src="img/battle.jpg" alt="Nature" style="width:100%">
       <center>
       <h3>BATTLEGROUNDS</h3>
       <h4>RS.499</h4>
       <h5>SAVE 30%</h5>
       <p><del>Rs.850</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
@@ -214,35 +220,38 @@ h5 {
 
 <div class="column people">
     <div class="content s">
-    <img src="https://s15.postimg.cc/5smft599n/hit.jpg" alt="Lights" style="width:100%">
+    <img src="img/hit.jpg" alt="Lights" style="width:100%">
       <center>
       <h3>HITMAN</h3>
       <h4>RS.1100</h4>
       <h5>SAVE 30%</h5>
       <p><del>Rs.1400</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
    <div class="column people">
     <div class="content s">
-    <img src="https://s15.postimg.cc/hzgzj8fuz/nfs.jpg" alt="Lights" style="width:100%">
+    <img src="img/nfs.jpg" alt="Lights" style="width:100%">
       <center>
       <h3>NEED FOR SPEED</h3>
       <h4>RS.1000</h4>
       <h5>SAVE 20%</h5>
       <p><del>Rs.1300</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
   
   <div class="column people">
     <div class="content s">
-    <img src="https://s15.postimg.cc/t1m2hxhq3/fifa.jpg" alt="Nature" style="width:100%">
+    <img src="img/fifa.jpg" alt="Nature" style="width:100%">
       <center>
       <h3>FIFA 2018</h3>
       <h4>RS.1250</h4>
       <h5>SAVE 30%</h5>
       <p><del>Rs.1500</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
@@ -251,34 +260,37 @@ h5 {
 
   <div class="column cars">
     <div class="content s">
-      <img src="https://s15.postimg.cc/bfisqteez/image.jpg" alt="Car" style="width:100%">
+      <img src="img/gt.jpg" alt="Car" style="width:100%">
       <center>
       <h3>THE GTA 5</h3>
       <h4>RS.800</h4>
       <h5>SAVE 30%</h5>
       <p><del>Rs.1200</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
   <div class="column cars s">
     <div class="content">
-    <img src="https://s15.postimg.cc/5oo0zabvf/battle1.jpg" alt="Car" style="width:100%">
+    <img src="img/battle1.jpg" alt="Car" style="width:100%">
       <center>
       <h3>FARCRY</h3>
       <h4>RS.850</h4>
       <h5>SAVE 30%</h5>
       <p><del>Rs.1300</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
   <div class="column cars s">
     <div class="content">
-    <img src="https://s15.postimg.cc/9l1cv99pn/images.jpg" alt="Car" style="width:100%">
+    <img src="img/images.jpg" alt="Car" style="width:100%">
       <center>
       <h3>ARCHE AGE</h3>
       <h4>RS.900</h4>
       <h5>SAVE 20%</h5>
       <p><del>Rs.1400</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
@@ -288,34 +300,37 @@ h5 {
 
 <div class="column nature">
     <div class="content s">
-    <img src="https://s15.postimg.cc/5dfrdvkfv/image.jpg" alt="Nature" style="width:100%">
+    <img src="img/c.jpg" alt="Nature" style="width:100%">
       <center>
       <h3>CALL OF DUTY</h3>
       <h4>RS.500</h4>
       <h5>SAVE 30%</h5>
       <p><del>Rs.800</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
     <div class="column cars s">
     <div class="content">
-    <img src="https://s15.postimg.cc/hs2jeih6j/max.jpg" alt="Car" style="width:100%">
+    <img src="img/max.jpg" alt="Car" style="width:100%">
       <center>
       <h3>MAX PAYNE 3</h3>
       <h4>RS.800</h4>
       <h5>SAVE 20%</h5>
       <p><del>Rs.1100</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
  <div class="column people">
     <div class="content s">
-    <img src="https://s15.postimg.cc/a1vr93jx7/ass.jpg" alt="Nature" style="width:100%">
+    <img src="img/ass.jpg" alt="Nature" style="width:100%">
       <center>
       <h3>ASSASSINS CREED</h3>
       <h4>RS.1350</h4>
       <h5>SAVE 30%</h5>
       <p><del>Rs.1500</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
@@ -324,34 +339,37 @@ h5 {
 
   <div class="column nature">
     <div class="content s">
-    <img src="https://s15.postimg.cc/4mdugr0rv/PC-_Game7.jpg" alt="Nature" style="width:100%">
+    <img src="img/PC-Game7.jpg" alt="Nature" style="width:100%">
       <center>
       <h3>DARKSIDE 2</h3>
       <h4>RS.500</h4>
       <h5>SAVE 30%</h5>
       <p><del>Rs.800</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
     <div class="column cars s">
     <div class="content">
-    <img src="https://s15.postimg.cc/9mfw2i8nv/call.jpg" alt="Car" style="width:100%">
+    <img src="img/call.jpg" alt="Car" style="width:100%">
       <center>
       <h3>CALL OF DUTY 3</h3>
       <h4>RS.800</h4>
       <h5>SAVE 20%</h5>
       <p><del>Rs.1100</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
  <div class="column people">
     <div class="content s">
-    <img src="https://s15.postimg.cc/uw3idd4e3/far.jpg" alt="Nature" style="width:100%">
+    <img src="img/far.jpg" alt="Nature" style="width:100%">
       <center>
       <h3>FARCRY 5</h3>
       <h4>RS.1350</h4>
       <h5>SAVE 30%</h5>
       <p><del>Rs.1500</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
@@ -360,34 +378,37 @@ h5 {
 
 <div class="column nature">
     <div class="content s">
-    <img src="https://s15.postimg.cc/5dfrdvkfv/image.jpg" alt="Nature" style="width:100%">
+    <img src="img/cal.jpg" alt="Nature" style="width:100%">
       <center>
       <h3>CALL OF DUTY</h3>
-      <h4>RS.500</h4>
-      <h5>SAVE 30%</h5>
-      <p><del>Rs.800</del></p>
+      <h4>RS.400</h4>
+      <h5>SAVE 20%</h5>
+      <p><del>Rs.700</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
     <div class="column cars s">
     <div class="content">
-    <img src="https://s15.postimg.cc/qybna5n17/PC-_Game8.jpg" alt="Car" style="width:100%">
+    <img src="img/PC-Game8.jpg" alt="Car" style="width:100%">
       <center>
       <h3>ASSASSINS CREED</h3>
       <h4>RS.800</h4>
       <h5>SAVE 20%</h5>
       <p><del>Rs.1100</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
  <div class="column people">
     <div class="content s">
-    <img src="https://s15.postimg.cc/a1vr93jx7/ass.jpg" alt="Nature" style="width:100%">
+    <img src="img/ass.jpg" alt="Nature" style="width:100%">
       <center>
       <h3>ASSASSINS CREED ORIGIN</h3>
       <h4>RS.1350</h4>
       <h5>SAVE 30%</h5>
       <p><del>Rs.1500</del></p>
+        <button type="button" class="btn btn-success" style="background-color: green">Download</button>
       </center>
     </div>
   </div>
